--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 
     <p>Need more information? Click here: <a href="./contact.html">Connect with me</a>
     </p>
+    <footer>
+        <p>© Saurav Ghimire</p>
+    </footer>
     
 </body>
 </html>
